feat: refactoring, add components

--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "lax.js": "https://github.com/alexfoxy/lax.js#version-2",
     "next": "9.5.5",
     "postcss-preset-env": "^6.7.0",
-    "scrollbooster": "^3.0.2",
-    "lax.js": "https://github.com/alexfoxy/lax.js#version-2",
+    "prop-types": "^15.7.2",
     "react": "16.14.0",
-    "react-dom": "16.14.0"
+    "react-dom": "16.14.0",
+    "scrollbooster": "^3.0.2"
   }
 }
