--- a/postcss.config.json
+++ b/postcss.config.json
@@ -7,7 +7,7 @@
           "flexbox": "no-2009"
         },
         "stage": 3,
-        "importFrom": "./styles/Vars.css",
+        "importFrom": "./css/variables.css",
         "features": {
           "custom-media-queries": true,
           "nesting-rules": true
