--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
   },
   "devDependencies": {
     "eslint": "^7.13.0",
-    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-standard": "^16.0.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
     "stylelint": "^13.7.2",
