--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,8 +3,8 @@ name: Node CI environment
 on: push
 
 jobs:
-  linters:
-    name: ESlint
+  eslint:
+    name: ESLint
     runs-on: ubuntu-latest
 
     strategy:
@@ -18,3 +18,19 @@ jobs:
 
       - name: Run ESLint
         run: yarn lint
+
+  stylelint:
+    name: Stylelint
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [14.x]
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: Install modules
+        run: yarn
+
+      - name: Run Stylelint
+        run: yarn stylelint
