--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "eslint": "eslint --ext .jsx .",
+    "lint": "eslint --ext .jsx .",
     "stylelint": "stylelint '**/*.css'"
   },
   "dependencies": {
