--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint --ext .jsx .",
-    "stylelint": "stylelint '**/*.css'"
+    "stylelint": "stylelint **/*.css"
   },
   "dependencies": {
     "classnames": "^2.2.6",
