--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint . --ext .js,.jsx",
-    "stylelint": "stylelint **/*.css"
+    "lint:js": "eslint . --ext .js,.jsx",
+    "lint:css": "stylelint **/*.css"
   },
   "dependencies": {
     "classnames": "^2.2.6",
     "lax.js": "^2.0.1",
+    "mobx": "^6.0.4",
+    "mobx-react-lite": "^3.1.6",
     "next": "10.0.1",
     "postcss-preset-env": "^6.7.0",
     "prop-types": "^15.7.2",
