--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,7 @@
         "plugin:react/recommended",
         "standard"
     ],
+    "parser": "@babel/eslint-parser",
     "parserOptions": {
         "ecmaFeatures": {
             "jsx": true
