--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "lint:css": "stylelint **/*.css"
   },
   "dependencies": {
-    "classnames": "^2.2.6", 
-    "lax.js": "^2.0.1",
+    "classnames": "^2.2.6",
+    "lax.js": "^2.0.2",
     "mobx": "^6.0.4",
     "mobx-react-lite": "^3.1.6",
     "next": "10.0.1",
+    "normalize.css": "^8.0.1",
     "postcss-preset-env": "^6.7.0",
     "prop-types": "^15.7.2",
     "react": "17.0.1",
