--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mobx-react-lite": "^3.1.6",
     "next": "10.0.1",
     "normalize.css": "^8.0.1",
+    "parallax-js": "^3.1.0",
     "postcss-preset-env": "^6.7.0",
     "prop-types": "^15.7.2",
     "react": "17.0.1",
