--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "lint:css": "stylelint **/*.css"
   },
   "dependencies": {
+    "aos": "^3.0.0-beta.6",
     "classnames": "^2.2.6",
-    "lax.js": "^2.0.2",
     "mobx": "^6.0.4",
     "mobx-react-lite": "^3.1.6",
     "next": "10.0.1",
@@ -20,8 +20,7 @@
     "postcss-preset-env": "^6.7.0",
     "prop-types": "^15.7.2",
     "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "scrollbooster": "^3.0.2"
+    "react-dom": "17.0.1"
   },
   "peerDependencies": {
     "@babel/core": "^7.12.3"
