--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "postcss-preset-env": "^6.7.0",
     "prop-types": "^15.7.2",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-yandex-metrika": "^2.6.0"
   },
   "peerDependencies": {
     "@babel/core": "^7.12.3"
